based config added

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ more_content: | # this will include new lines to allow paragraphs
   Alongside my interests in networks and software engineering some of my other interests and hobbies are:
    - Gaming; I am a huge fan of [Hidetaka Miyazaki's](https://en.wikipedia.org/wiki/Hidetaka_Miyazaki) games.
    - Running
-   - Movies
+   - Movies: Anime
 
 # Footer
 footer_show_references: true
