--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,9 +1,18 @@
 - layout: left
-  company: The Boring Company
-  link: boringcompany.com
-  job_title: Senior Network System Administrator
-  dates: November 2017 - Present
+  company: Informatics Services Corporation (ISC)
+  link: en.isc.co.ir
+  job_title: Software Engineer
+  dates: May 2018 - Present
   quote: >
-   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+    ISC is the market leading provider of banking systems to almost all commercial banks of Iran as well as many financial institutions
+  description: | # this will include new lines to allow paragraphs
+    Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+- layout: left
+  company: Bio-Inspired System Design Lab
+  link: autman.aut.ac.ir
+  job_title: Research Assistant
+  dates: June 2016 - February 2020
+  quote: >
+    ISC is the market leading provider of banking systems to almost all commercial banks of Iran as well as many financial institutions
   description: | # this will include new lines to allow paragraphs
     Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
