--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,7 +1,7 @@
 - layout: left
   name: Iran University of Science and Technology
   dates: 2015 - 2020
-  qualification: BSc Computer Engineering
+  qualification: B.Sc. Computer Engineering
   quote: >
     Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
   description: | # this will include new lines to allow paragraphs
