--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -16,3 +16,11 @@
     ISC is the market leading provider of banking systems to almost all commercial banks of Iran as well as many financial institutions
   description: | # this will include new lines to allow paragraphs
     Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+- layout: left
+  company: Robotics Lab
+  job_title: Research Assistant
+  dates: October 2013 - July 2014
+  quote: >
+    ISC is the market leading provider of banking systems to almost all commercial banks of Iran as well as many financial institutions
+  description: | # this will include new lines to allow paragraphs
+    Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
