--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -6,21 +6,29 @@
   quote: >
     ISC is the market leading provider of banking systems to almost all commercial banks of Iran as well as many financial institutions
   description: | # this will include new lines to allow paragraphs
-    Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+    I am a software engineer in the "National Payment Systems Development" group. Nowadays, I am engaged in two national banking projects, 
+    Central Securities Depository (CSD)and Iranian Instant Payment (IIP).
+
+    I develop back-end services mainly through <mark>Spring Boot</mark> and <mark>Spring frameworks</mark> based on microservice and monolithic
+    architectures. Also, I develop front-end applications with <mark>Angular</mark> framework. In terms of DevOps, I am responsible for 
+    <mark>dockerizing</mark> our services and using <mark>Jenkins</mark> for CI/CD.
+    
 - layout: left
   company: Bio-Inspired System Design Lab
   link: autman.aut.ac.ir
   job_title: Research Assistant
   dates: June 2016 - February 2020
-  quote: >
-    ISC is the market leading provider of banking systems to almost all commercial banks of Iran as well as many financial institutions
+  quote: 
   description: | # this will include new lines to allow paragraphs
-    Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+    I was mainly responsible for solving the Robocup's competition Roll and Kick challenge. We designed a method for predicting
+    ball's trajectory by combining <mark>k-NN Regression</mark> and <mark>Autoregression</mark> methods. Also, I developed Motion Editor, Offset Tuner,
+    and Walk Tuner softwares for our teen-size humanoid robots and Iranian standard platform robot, Kiarash. In addition, I developed, modularized, 
+    and migrated our codes to the ROS platform.
 - layout: left
   company: Robotics Lab
   job_title: Research Assistant
   dates: October 2013 - July 2014
-  quote: >
-    ISC is the market leading provider of banking systems to almost all commercial banks of Iran as well as many financial institutions
+  quote: 
   description: | # this will include new lines to allow paragraphs
-    Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+    I got deeper into robotics and artificial intelligence concepts by researching on <mark>Q-Learning</mark> method and developing
+    the stand-up motion for our humanoid robot based on the <mark>ROS</mark> platform. 
