--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,10 +1,9 @@
 - layout: top-middle
   name: Iran University of Science and Technology
-  dates:
-    2015 - 2020
+  dates: 2015 - 2020<br>GPA 17.32/20 (3.72/4)
   qualification: B.Sc. Computer Engineering
-  quote:
-    GPA 17.32/20 (3.72/4)
+  # quote:
+  #   GPA 17.32/20 (3.72/4)
   description: | # this will include new lines to allow paragraphs
 #    During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
 #
