--- a/_config.yml
+++ b/_config.yml
@@ -32,9 +32,7 @@ about_content: | # this will include new lines to allow paragraphs
   Hi, my name’s Shayan, and I’ve recently graduated with a Bachelor of Science in Computer Engineering from Iran University of Science and Technology. Right now, I am a software engineer at Informatics Services Corporation (ISC). 
   I was a research assistant at the Bio-Inspired System Design lab under the supervision of [Prof. Soroush Sadeghnejad](https://www.linkedin.com/in/soroush-sadeghnejad-a13aa888/) in the Amirkabir University of Technology. 
   Before that, I was a research assistant at the Robotics lab under the supervision of [Prof. Mohsen Bahrami](https://aut.ac.ir/cv/2297/Mohsen%20Bahrami) at the Amirkabir University of Technology.
-  
-  My research interests are <mark>Software Engineering</mark>, <mark>Human-Computer Interaction</mark> , and applications of <mark>Machine Learning</mark> in these areas.
-
+# My research interests are <mark>Software Engineering</mark>, <mark>Human-Computer Interaction</mark> , and applications of <mark>Machine Learning</mark> in these areas.
 # My <mark>CV</mark> is available through [here](https://drive.google.com/file/d/1LR-s-f8XEQCjyPmTnlSGrYSpq_axUVro/view?usp=sharing).
 darkmode: never
 # Projects Section
