--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -56,7 +56,7 @@
   dates: Fall 2019
   # github: https://github.com/Abradat/coco-unity
   description: | # this will include new lines to allow paragraphs
-    Linux kernel module which hooks read and write system calls usign **ftrace** and performs encrypt/decrypt actions with **ROT13**. [`[code]`](https://github.com/Abradat/kernel-hook-module)
+    Linux kernel module which hooks read and write system calls using **ftrace** and performs encrypt/decrypt actions with **ROT13**. [`[code]`](https://github.com/Abradat/kernel-hook-module)
 
 - layout: left
   name: English to Persian Subtitle Translation
